# Corewar

./: .gitignore  .gitmodules  CMakeLists.txt  COREWAR.xlsx  Makefile  asm_plan  check_cor.c  corewar.c  corewar.h  ex.s  idea.txt  new_idea.txt  op.c  potator.cor  potator.s  script.sh  test
asm/: TODO  asm.txt  asm_plan
asm_f/: Makefile  asm
asm_f/includes/: asm.h  op.h
asm_f/srcs/: bytecode.c  del.c  exit.c  ft_atol.c  ft_lst_clear.c  ft_lst_push_back.c  label.c  label2.c  little_err_dispatcher.c  main.c  other.c  parse_arg.c  parse_args.c  parse_code.c  parser_checks.c  parser_error.c  parser_other.c  parsing_name_and_comment.c  parsing_name_and_comment2.c  things_to_bytecode.c
champs/: ex.s
corewar_f/: Makefile  Makefile_old  author  hex.cor  vm.txt
corewar_f/docs/: TODO
corewar_f/includes/: corewar.h
corewar_f/srcs/: bit_funcs.c  check_cor.c  cor_func.c  cor_ld.c  cor_st.c  corewar.c  debug_func.c  final_output.c  fork_func.c  get_args.c  get_int.c  get_parameters.c  help_functions.c  ld_func.c  live_functions.c  main.c  main_cycle.c  math_func.c  ncurses.c  ncurses_help.c  ncurses_trigger.c  output_text.c  sort_players.c  st_func.c
corewar_f/vm_test/: ch  ex.cor  ex.s  ex2.cor  ex2.s  sh
includes/: corewar.h
libft/: Makefile  ft_isinteger.c  libft.h
libft/lst/includes/: ft_lst.h
source_code/: op.c  op.h
srcs/: check_cor.c  corewar.c  get_parameters.c
vm/: TIPS  TODO  vm.h  vm.txt
vm_champs/: asm_dev  kek.sh  kek2.sh  kek3.sh  kek_multiple.sh  superkek.sh
vm_champs/champs/: ex.cor  ex.s
vm_champs/champs/examples/: helltrain.co
